Add GUI console